src/objects/HR_Contact_Job__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Profile</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_Contact_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Contact Jobs</relationshipLabel>
        <relationshipName>HR_Contact_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_Location__c</fullName>
        <formula>$User.Desired_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Job</label>
        <referenceTo>HR_Job__c</referenceTo>
        <relationshipLabel>HR Contact Jobs</relationshipLabel>
        <relationshipName>HR_Contact_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Willing_to_Travel__c</fullName>
        <label>Willingness to Travel</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>HR Contact Job</label>
    <nameField>
        <label>HR Contact Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Contact Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>